Infrastructure/nginx/1-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
  namespace: ecommerce-project
  annotations:
    cert-manager.io/cluster-issuer: ecommerce-production
spec:
  ingressClassName: external-nginx
  rules:
    - host: test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-svc
                port:
                  number: 12340
    - host: rabbitmq.test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq
                port:
                  number: 15672
    - host: jaeger.test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jaeger-service
                port:
                  number: 16686
          
  tls:
    - hosts:
        - test.com
      secretName: test-com
    - hosts:
        - rabbitmq.test.com
      secretName: rabbitmq-test-com
    - hosts:
        - jaeger.test.com
      secretName: jaeger-test-com
